# TicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hev-net
include/: game.h  peer.h  tictactoe.h
src/: game.cpp  peer.cpp  practice.cpp  tictactoe.cpp
